<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.cookbook.domain</groupId>
	<artifactId>cookbook-domain</artifactId>
	<version>0.1.0-SNAPSHOT</version>
	<name>Cook Book Domain Objects</name>


	<repositories>
		<repository>
			<!-- For Hibernate Validator -->
			<id>org.jboss.repository.release</id>
			<name>JBoss Maven Release Repository</name>
			<url>https://repository.jboss.org/nexus/content/repositories/releases</url>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</repository>
	</repositories>

	<properties>
		<org.springframework.version>3.0.5.RELEASE</org.springframework.version>
		<org.slf4j.version>1.6.1</org.slf4j.version>
		<hibernate.search.version>3.4.0.Alpha1</hibernate.search.version>
		<hibernate.entity.manager.version>3.6.1.Final</hibernate.entity.manager.version>
		<hibernate.validator.version>4.1.0.Final</hibernate.validator.version>
	</properties>

	<dependencies>

		<!-- Logging -->
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>${org.slf4j.version}</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>jcl-over-slf4j</artifactId>
			<version>${org.slf4j.version}</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-log4j12</artifactId>
			<version>${org.slf4j.version}</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>log4j</groupId>
			<artifactId>log4j</artifactId>
			<version>1.2.16</version>
			<scope>compile</scope>
		</dependency>

		<!-- Hibernate Jars -->
		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-search</artifactId>
			<version>${hibernate.search.version}</version>
		</dependency>
		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-entitymanager</artifactId>
			<version>${hibernate.entity.manager.version}</version>
		</dependency>
		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-validator</artifactId>
			<version>${hibernate.validator.version}</version>
		</dependency>

		<!-- Database connection pooling jar -->
		<dependency>
			<groupId>commons-dbcp</groupId>
			<artifactId>commons-dbcp</artifactId>
			<version>1.4</version>
		</dependency>

		<!-- Embedded DB H2 for Test Driven Development -->
		<dependency>
			<groupId>com.h2database</groupId>
			<artifactId>h2</artifactId>
			<version>1.3.150</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.8.2</version>
			<scope>test</scope>
		</dependency>

	</dependencies>

	<build>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>2.3.2</version>
				<configuration>
					<source>1.6</source>
					<target>1.6</target>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-jar-plugin</artifactId>
				<version>2.3.1</version>
				<configuration>
					<archive>
						<manifest>
							<addClasspath>true</addClasspath>
						</manifest>
					</archive>
				</configuration>
			</plugin>
			<!-- plugin> <groupId>org.codehaus.mojo</groupId> <artifactId>cobertura-maven-plugin</artifactId> 
				<version>2.4</version> <configuration> <check> <branchRate>70</branchRate> 
				<lineRate>70</lineRate> <haltOnFailure>true</haltOnFailure> <totalBranchRate>70</totalBranchRate> 
				<totalLineRate>70</totalLineRate> <packageLineRate>70</packageLineRate> <packageBranchRate>70</packageBranchRate> 
				<regexes> <regex> <pattern>com.cookbook.*</pattern> <branchRate>90</branchRate> 
				<lineRate>80</lineRate> </regex> <regex> <pattern>com.cookbook.*</pattern> 
				<branchRate>40</branchRate> <lineRate>30</lineRate> </regex> </regexes> </check> 
				</configuration> <executions> <execution> <goals> <goal>clean</goal> <goal>check</goal> 
				</goals> </execution> </executions> </plugin -->
			<plugin>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.7.2</version>
				<configuration>
					<argLine>-Xms128m -Xmx256m -XX:PermSize=128m -XX:MaxPermSize=256m</argLine>
					<parallel>true</parallel>
					<includes>
						<include>**/*TestSuite*.java</include>
					</includes>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>
